2017-10-27  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-10-25  Bruno Haible  <bruno@clisp.org>

	Fix build failure on 64-bit platforms with oint_addr_len==32.
	* lispbibl.d (SPint): Define as uintP.

2017-10-25  Bruno Haible  <bruno@clisp.org>

	Small code cleanup.
	* package.d (rehash_symtab): Remove leftover code from 2009-10-07.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Improve code structure.
	* foreign.d: Reorder functions, to avoid forward declarations.
	* subr.d: Update.
	* constsym.d: Update.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Code style.
	* foreign.d: Use 'var' for local variable declarations.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Fix compilation errors on HP-UX (regression from 2008-03-12).
	* unix.d: On HP-UX, undefine also HAVE_DLADDR etc.
	* foreign.d (foreign_library_variable, foreign_library_function):
	Fix declaration to match the one on the other platforms.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Don't assume that /dev/fd[012] exists on AIX and HP-UX.
	* stream.d (handle_pathname): On AIX and HP-UX, return NIL.
	* makemake.in (check-script): Don't run unportable test on AIX and
	HP-UX.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Fix the error message of TRUENAME on a nonexistent file.
	* pathname.d (my_realpath): Define always.
	(realpath_is_my_realpath): New macro.
	(realpath_obj): Invoke realpath, then my_realpath in case of error
	ENOENT.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix an endless recursion during "make check" on AIX.
	* stream.d (IS_EINVAL_EXTRA): On AIX, include the ENODEV errors.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix a "make check" hang on AIX.
	* makemake.in (check-script): Work around an AIX peculiarity.
